Fixed graph rendering

--- a/dashboard/dashboard3.html
+++ b/dashboard/dashboard3.html
@@ -320,7 +320,7 @@ a.job-log-line-url {
 		</td>
 	</tr>
 	
-	<tr class="job-queue-graph" ng-repeat-end>
+	<tr class="job-queue-graph" colspan="5" ng-repeat-end>
 		<td>
 			<canvas id="graph-canvas-{{:: job.ident }}" width="600" height="50"></canvas>
 		</td>
